--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "./server.js",
+      "src": "src/server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
+      "src": "/enviar-correo",
+      "dest": "src/server.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "./server.js"
+      "dest": "src/server.js"
     }
   ]
 }
